# gestalt_question_generator

./: .gitignore  .gitmodules  README.md  pyproject.toml
gestalt_streamlit_template/src/gestalt_streamlit_template/: main.py
langgraph_server/: .env.template  langgraph.json  pyproject.toml
langgraph_server/src/ai_tools/: __init__.py  ai_tools.py  file_tools.py
langgraph_server/src/code_generator/: __init__.py  document_loader.py  models.py  vectorstore.py
langgraph_server/src/code_generator/agents/: agent_module.py  agent_simple.py
langgraph_server/src/code_generator/graphs/: __init__.py  gestalt_generator.py  question_html_graph.py  question_metadata_graph.py  server_js_graph.py  server_py_graph.py  solution_html_graph.py
langgraph_server/src/code_generator/outputs/gestalt_module/: output.json
langgraph_server/src/code_generator/outputs/metadata/: output.json
langgraph_server/src/code_generator/outputs/question_html/: output.json
langgraph_server/src/code_generator/prompts/: prompts.py
langgraph_server/src/code_validation/: __init__.py  graph.py  models.py
langgraph_server/src/file_uploads/: main.py
langgraph_server/src/models/: __init__.py  extraction.py  models.py  question.py  structured_output.py
langgraph_server/src/utils/: __init__.py  langsmith_utils.py  serialization_utils.py  utils.py  visualization_utils.py
streamlit_app/: pyproject.toml
streamlit_app/src/streamlit_app/: main.py
streamlit_app/src/streamlit_app/core/: config.py
streamlit_app/src/streamlit_app/ui/: layout.py
(+2 files in other folders)
