[project]
name = "gestalt-question-generator"
version = "0.1.0"
description = ""
authors = [
    {name = "Luciano Bermudez",email = "lucianobmecheng69@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.13,<4.0.0"
dependencies = [
    "src @ file:///C:/Github/gestalt_question_generator/langgraph_server",
    "streamlit-app @ file:///C:/Github/gestalt_question_generator/streamlit_app"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
